2009-05-19  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (refresh), (ref_ncu_group_node),
	(handle_ncu_group_node), (on_button_clicked): Added new functions.
	ref_ncu_group_node is to get the reference of the parent of a row or
	itself. handle_ncu_group_node is for handling the parent reference after
	moving its children, e.g. deleting or inserting (none) node.

	Enable/disalbe ncu is done. Rename has been there, not tested. Set
	sensitive for tree view and profile edit button according that if
	selected ncp is modifiable.

2009-05-19  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (capplet_tree_store_move_children),
	(on_button_clicked), (selection_func): New/delete group is done.

2009-05-18  Darren Kenny  <darren.kenny@sun.com>

	* common/help_refs.h:
	  Header file containing a generated list of all HELP document
	  references.
	* scripts/extract_help_tags.pl:
	  Script to generate the help_refs.h file from a help file.
	* capplet/nwam-manager-properties.glade:
	* capplet/nwam-manager-properties.ui:
	  Add Help button to the Location dialog.
	* capplet/nwam_conn_conf_ip_panel.c, capplet/nwam_conn_stat_panel.c,
	  capplet/nwam_env_pref_dialog.c, capplet/nwam_location_dialog.c,
	  capplet/nwam_net_conf_panel.c, capplet/nwam_vpn_pref_dialog.c: 
	  Make sure that Help buttons link to appropriate locations is Help
	  document.
	* common/libnwamui.c, common/libnwamui.h:
	  Make help function handle a NULL location, and add help_refs to
	  libnwamui.h header file.

2009-05-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(refresh), (nwam_net_conf_update_status_cell_cb),
	(on_button_clicked), (selection_func), (update_widgets),
	(ncu_pri_group_get_hash), (ncu_pri_group_get_path),
	(ncu_pri_group_get_iter), (ncu_pri_group_update):
	Fixed group id is increasing infinitely by using ncu_pri_group_update
	to collapse group id.

2009-05-18  Darren Kenny  <darren.kenny@sun.com>
